feat: implement shop, shopMember | replace joi by zod, rewrite docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
 
@@ -17,7 +17,8 @@ services:
       - node-network
 
   mongo1:
-    image: mongo:5
+    #    image: mongo:5
+    image: mongo:7.0
     container_name: mongo1
     command: [ "--replSet", "my-replica-set", "--bind_ip_all", "--port", "30001" ]
     volumes:
@@ -25,14 +26,18 @@ services:
     ports:
       - "30001:30001"
     healthcheck:
-      test: tests $$(echo "rs.initiate({_id:'my-replica-set',members:[{_id:0,host:\"mongo1:30001\"},{_id:1,host:\"mongo2:30002\"},{_id:2,host:\"mongo3:30003\"}]}).ok || rs.status().ok" | mongo --port 30001 --quiet) -eq 1
-      interval: 10s
-#      start_period: 30s
+      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'my-replica-set',members:[{_id:0,host:'mongo1:30001',priority:1},{_id:1,host:'mongo2:30002',priority:0.5},{_id:2,host:'mongo3:30003',priority:0.5}]}) }" | mongosh --port 30001 --quiet
+      interval: 5s
+      timeout: 30s
+      start_period: 0s
+      start_interval: 1s
+      retries: 30
     networks:
       - node-network
 
   mongo2:
-    image: mongo:5
+    #    image: mongo:5
+    image: mongo:7.0
     container_name: mongo2
     command: [ "--replSet", "my-replica-set", "--bind_ip_all", "--port", "30002" ]
     volumes:
@@ -43,7 +48,8 @@ services:
       - node-network
 
   mongo3:
-    image: mongo:5
+    #    image: mongo:5
+    image: mongo:7.0
     container_name: mongo3
     command: [ "--replSet", "my-replica-set", "--bind_ip_all", "--port", "30003" ]
     volumes:
