--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^4.1.0",
     "http-status-codes": "2.2.0",
-    "joi": "^17.11.0",
     "jsonwebtoken": "8.5.1",
     "moment": "^2.29.4",
     "mongoose": "6.5.1",
@@ -48,7 +47,8 @@
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "validator": "^13.0.0",
-    "winston": "3.8.2"
+    "winston": "3.8.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
@@ -59,6 +59,7 @@
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
+    "@types/express-serve-static-core": "^4.17.41",
     "@types/jsonwebtoken": "8.5.9",
     "@types/node": "18.8.3",
     "@types/nodemailer": "6.4.7",
