--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "6.9.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "slugify": "^1.6.6",
     "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
@@ -89,6 +90,6 @@
     "vitest": "^1.0.1"
   },
   "keywords": [],
-  "author": "Hau Tran",
+  "author": "Hau Tran - hautran.job@outlook.com",
   "license": "MIT"
 }
