--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ MONGODB_URL=mongodb://mongo1:30001/arc
 
 # JWT
 # JWT secret key
-JWT_SECRET=dauphaihau
+JWT_SECRET=secret
 # Number of minutes after which an access token expires
 JWT_ACCESS_EXPIRATION_MINUTES=4320
 # Number of days after which a refresh token expires
@@ -26,3 +26,9 @@ EMAIL_FROM=support@app-name.com
 
 # Cors origin url ( base url client )
 CORS_ORIGIN=http://localhost:3001
+
+# AWS S3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_REGION=
+AWS_S3_BUCKET=
