feat: implement address, cart, coupon, order | configure stripe, redis

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,11 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_REGION=
 AWS_S3_BUCKET=
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# Stripe
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET_KEY=
