--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^4.1.0",
     "http-status-codes": "2.2.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "8.5.1",
     "moment": "^2.29.4",
     "mongoose": "6.5.1",
@@ -44,7 +45,10 @@
     "nodemailer": "6.9.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "redis": "4.6",
+    "redlock": "5.0.0-beta.2",
     "slugify": "^1.6.6",
+    "stripe": "^14.9.0",
     "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
