refactor: forget, reset password | perf: Dockerfile use multi-stage | chore: remove docker compose

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ SMTP_USERNAME=patricia.harber74@ethereal.email
 SMTP_PASSWORD=du9eHJwmrcGUAhcDxV
 EMAIL_FROM=support@app-name.com
 
-# Cors origin url ( base url client )
+# Cors origin url ( base url frontend )
 CORS_ORIGIN=http://localhost:3001
 
 # AWS S3
