--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "pnpm run rm:dist && cross-env NODE_ENV=production tsc --project tsconfig.build.json && tsc-alias && pnpm run copy:files",
     "dev": "pnpm rm:dist && cross-env NODE_ENV=development npx ts-node-dev --poll --files --respawn --inspect -r tsconfig-paths/register ./src/server.ts",
     "start": "pnpm rm:dist && cross-env NODE_ENV=production ts-node --files --transpile-only -r tsconfig-paths/register ./src/server.ts",
+    "seed": "ts-node --files --transpile-only -r tsconfig-paths/register src/database/seeder/db-seeder.ts",
     "lint": "eslint .",
     "lint:src": "eslint src/**/*.ts",
     "lint:fix": "eslint . --fix",
