chore: fix script package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:local": "pnpm run rm:dist && cross-env NODE_ENV=production tsc --project tsconfig.build.json && tsc-alias && pnpm run copy:files",
     "start:local": "pnpm rm:dist && cross-env NODE_ENV=production ts-node --files --transpile-only -r tsconfig-paths/register src/index.ts",
     "build": "tsc --project tsconfig.build.json && tsc-alias",
+    "start": "node ./dist/index.js",
     "dev": "pnpm rm:dist && cross-env NODE_ENV=development npx ts-node-dev --poll --files --respawn --inspect -r tsconfig-paths/register src/index.ts",
-    "start": "pnpm rm:dist && cross-env NODE_ENV=production ts-node --files --transpile-only -r tsconfig-paths/register ./src/index.ts",
     "seed": "ts-node --files --transpile-only -r tsconfig-paths/register src/database/seeder/db-seeder.ts",
     "lint": "eslint .",
     "lint:src": "eslint src/**/*.ts",
