--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # Port number
 PORT=3000
 
+# Cors origin url ( base url web app )
+CORS_ORIGIN=http://localhost:4000
+
 # URL of the Mongo DB
-MONGODB_URL=mongodb://mongo1:30001/arc
+MONGODB_URL=
 
 # JWT
 # JWT secret key
@@ -18,24 +21,25 @@ JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
 # SMTP configuration options for the email service
 # For testing, you can use a fake SMTP service like Ethereal: https://ethereal.email/create
-SMTP_HOST=smtp.ethereal.email
-SMTP_PORT=587
-SMTP_USERNAME=patricia.harber74@ethereal.email
-SMTP_PASSWORD=du9eHJwmrcGUAhcDxV
-EMAIL_FROM=support@app-name.com
-
-# Cors origin url ( base url frontend )
-CORS_ORIGIN=http://localhost:4000
+SMTP_SERVICE=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+EMAIL_FROM=
 
 # AWS S3
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_REGION=
 AWS_S3_BUCKET=
+AWS_S3_HOST_BUCKET=
 
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
 
 # Stripe
 STRIPE_SECRET_KEY=
